# beme

./: .env.example  .gitignore  AGENTS.md  README.md  control-bar.html  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml
infra/: README.md  main.bicep  main.bicepparam
infra/modules/: foundry.bicep  monitoring.bicep
src/: App.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  settings.rs  stream_manager.rs  tray.rs
src-tauri/src/ai/: azure_audio.rs  azure_vision.rs  mod.rs  types.rs
src-tauri/src/capture/: audio.rs  mod.rs  screen.rs
src-tauri/tests/: audio_e2e.rs  full_e2e.ps1  stream_manager_test.rs
src-tauri/tests/fixtures/: pcm-to-wav.cjs  test-speech-24khz.pcm
src/control-bar/: ControlBar.tsx  index.tsx
src/dashboard/: Dashboard.tsx  index.tsx  settingsStore.ts
src/dashboard/components/: CapturePreview.tsx  ErrorPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  SuggestionPanel.tsx
src/lib/: commands.ts  events.ts
tests/e2e/: ui-render.spec.ts
